--- a/frontend/src/search.html
+++ b/frontend/src/search.html
@@ -16,7 +16,7 @@
 
         <div class="searchBarContainer">
             <label for="seedSearchInput">Search</label>
-            <input type="text" id="seedSearchInput" required>
+            <input type="text" id="seedSearchInput" class="seedSearchInput" required>
 
             <ul id="seedSearchResults" class="seedSearchUnorderedList">
                 
