--- a/frontend/src/favorite.html
+++ b/frontend/src/favorite.html
@@ -20,6 +20,7 @@
     <aside class="sidebar">
       <img src="./logos/navigation-title.png" alt="Navigation">
       <ul>
+        <li><a href="#">Search</a></li>
         <li><a href="#">Song Recommendations</a></li>
         <li><a href="#">Your Favorites</a></li>
         <li><a href="#">Sign Out</a></li>
