--- a/frontend/src/logout.html
+++ b/frontend/src/logout.html
@@ -8,25 +8,15 @@
 
     <script src="login.js"></script>
     <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="logout.css" />
 
 </head>
 <body>
-    <form>
-        <header class="header">
-            <img src="./logos/beat-buddy-logo-full.png" alt="Beat Buddy Logo">
-        </header>
-        <div>
-            <label for="Username">Username</label>
-            <input type="text" id="Username" required>
-        </div>
-        <div>
-            <label for="Password">Password</label>
-            <input type="password" id="Password" required>
-        </div>
-        <button onclick="sendAuthenticationRequest()" type="submit">Save</button>
-
-    </form>
+    <header class="header">
+        <img src="./logos/beat-buddy-logo-full.png" alt="Beat Buddy Logo">
+    </header>
+    <h1>Goodbye!</h1>
+    
     <footer class="footer">
         <img src="./logos/beat-buddy-logo-small.png" alt="Beat Buddy Logo Small">      
         <div class="text-container">
