--- a/frontend/src/output.html
+++ b/frontend/src/output.html
@@ -20,10 +20,9 @@
     <aside class="sidebar">
       <img src="./logos/navigation-title.png" alt="Navigation">
       <ul>
-        <li><a href="#">Search</a></li>
-        <li><a href="#">Song Recommendations</a></li>
-        <li><a href="#">Your Favorites</a></li>
-        <li><a href="#">Sign Out</a></li>
+        <li><a href="search.html">Song Recommendations</a></li>
+        <li><a href="favorite.html">Your Favorites</a></li>
+        <li><a href="logout.html">Sign Out</a></li>
       </ul>
     </aside>
   </div>
