--- a/frontend/src/logout.html
+++ b/frontend/src/logout.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <script src="login.js"></script>
+    <script src="forwarding.js"></script>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="logout.css" />
 
@@ -16,6 +17,7 @@
         <img src="./logos/beat-buddy-logo-full.png" alt="Beat Buddy Logo">
     </header>
     <h1>Goodbye!</h1>
+    <button onclick="otherPageClicked('/login')">Back to Login</button>
     
     <footer class="footer">
         <img src="./logos/beat-buddy-logo-small.png" alt="Beat Buddy Logo Small">      
