Finished routing and logging in and out

--- a/frontend/src/logout.html
+++ b/frontend/src/logout.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="login.js"></script>
-    <script src="forwarding.js"></script>
+    <script src="authentication.js"></script>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="logout.css" />
 
@@ -17,7 +16,7 @@
         <img src="./logos/beat-buddy-logo-full.png" alt="Beat Buddy Logo">
     </header>
     <h1>Goodbye!</h1>
-    <button onclick="otherPageClicked('/login')">Back to Login</button>
+    <button onclick="location.href='/login'">Back to Login</button>
     
     <footer class="footer">
         <img src="./logos/beat-buddy-logo-small.png" alt="Beat Buddy Logo Small">      
