--- a/frontend/src/search.html
+++ b/frontend/src/search.html
@@ -9,7 +9,7 @@
     <script src="search.js"></script>
     <script src="authentication.js"></script>
     <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="search.css" />
+    <link rel="stylesheet" href="search.css">
  
 </head>
 <body>
