--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -8,7 +8,7 @@
 
     <script src="authentication.js"></script>
     <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="login.css">
 
 </head>
 <body>
